--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,30 @@ body {
     user-select: none;
 }
 
+.start-menu-box {
+    position: absolute;
+    bottom: 40px;
+    left: 10px;
+    width: 160px;
+    background-color: #222;
+    border: 1px solid #444;
+    border-radius: 4px;
+    padding: 10px;
+    display: none;
+    z-index: 200;
+}
+
+#start-toggle:checked ~ .start-menu-box {
+    display: block;
+}
+
 .start-menu:hover {
     background-color: #3a3a3a;
     color: white;
+}
+
+.start-toggle {
+    display: none;
 }
 
 .taskbar-icons {
